--- a/modelo-html/index.html
+++ b/modelo-html/index.html
@@ -15,16 +15,52 @@ body {
 	color: #FFF;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
+#apDiv1 {
+	margin-top:250px;
+	position: absolute;
+	width: 1040px;
+	height: 250px;
+	z-index: 1;
+}
 </style>
+<script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
 </head>
 <body>
 <!-- Save for Web Slices (AN_FANPAGE-oasisDay.psd) -->
 <div class="tudo">
-    <div id="flashContent">    	<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="728" height="90" id="banner-mavel" align="middle">    		<param name="movie" value="banner-mavel.swf" />    		<param name="quality" value="high" />    		<param name="bgcolor" value="#ffffff" />    		<param name="play" value="true" />    		<param name="loop" value="true" />    		<param name="wmode" value="window" />    		<param name="scale" value="showall" />    		<param name="menu" value="true" />    		<param name="devicefont" value="false" />    		<param name="salign" value="" />    		<param name="allowScriptAccess" value="sameDomain" />    		<!--[if !IE]>-->    		<object type="application/x-shockwave-flash" data="banner-mavel.swf" width="728" height="90">    			<param name="movie" value="banner-mavel.swf" />    			<param name="quality" value="high" />    			<param name="bgcolor" value="#ffffff" />    			<param name="play" value="true" />    			<param name="loop" value="true" />    			<param name="wmode" value="window" />    			<param name="scale" value="showall" />    			<param name="menu" value="true" />    			<param name="devicefont" value="false" />    			<param name="salign" value="" />    			<param name="allowScriptAccess" value="sameDomain" />    		<!--<![endif]-->    			<a href="http://www.adobe.com/go/getflash">    				<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />    			</a>    		<!--[if !IE]>-->    		</object>    		<!--<![endif]-->    	</object>    </div>
     
-		
+  <div id="apDiv1">
+  
+    <object id="FlashID" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="1040" height="250">
+      <param name="movie" value="images/banner-mavel.swf">
+      <param name="quality" value="high">
+      <param name="wmode" value="opaque">
+      <param name="swfversion" value="6.0.65.0">
+      <!-- This param tag prompts users with Flash Player 6.0 r65 and higher to download the latest version of Flash Player. Delete it if you don’t want users to see the prompt. -->
+      <param name="expressinstall" value="Scripts/expressInstall.swf">
+      <!-- Next object tag is for non-IE browsers. So hide it from IE using IECC. -->
+      <!--[if !IE]>-->
+      <object type="application/x-shockwave-flash" data="images/banner-mavel.swf" width="1040" height="250">
+        <!--<![endif]-->
+        <param name="quality" value="high">
+        <param name="wmode" value="opaque">
+        <param name="swfversion" value="6.0.65.0">
+        <param name="expressinstall" value="Scripts/expressInstall.swf">
+        <!-- The browser displays the following alternative content for users with Flash Player 6.0 and older. -->
+        <div>
+          <h4>Content on this page requires a newer version of Adobe Flash Player.</h4>
+          <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" width="112" height="33" /></a></p>
+        </div>
+        <!--[if !IE]>-->
+      </object>
+      <!--<![endif]-->
+    </object>
+  </div>
 </div>
 <!-- End Save for Web Slices -->
 
+<script type="text/javascript">
+swfobject.registerObject("FlashID");
+</script>
 </body>
 </html>
